<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ddmeng.helloactivityandfragment.launchmode.SingleTaskActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_mode_single_task"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/current_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:textSize="@dimen/text_size_normal" />

    <Button
        android:id="@+id/launch_mode_start_standard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_mode_start_standard"
        android:textSize="@dimen/text_size_normal" />

    <Button
        android:id="@+id/launch_mode_start_single_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_mode_start_single_top"
        android:textSize="@dimen/text_size_normal" />

    <Button
        android:id="@+id/launch_mode_start_single_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_mode_start_single_task"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>
