<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/apple_green"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_parent"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/button_show_child_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_show_child_fragment"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/button_update_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_title"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>
</RelativeLayout>